Plugin Name: Protected Content
Author: Fabio Jun, Rheinard Khorf, Philipp Stracker

Change Log:
----------------------------------------------------------------------

1.0.4.9
----------------------------------------------------------------------
- Fix an JavaScript error in the page front-end

1.0.4.8
----------------------------------------------------------------------
- Fix 100 % discount logic; payment gateway is skipped now
- Fix incompatibility with E-Newsletter plugin
- Fix incompatibility with PopUp Pro and Google Maps
- Fix PHP warning displayed to some users when signing up to Membership
- Some other small improvements and fixes

1.0.4.8
----------------------------------------------------------------------
- Fix incompatibility with E-Newsletter plugin
- Fix incompatibility with PopUp Pro and Google Maps
- Fix PHP warning displayed to some users when signing up to Membership

1.0.4.7
----------------------------------------------------------------------
- Fix rewrite rules on plugin update/activation (solves payment-issues)
- Fix PayPal Single settings did not save email address in rare cases
- Fix duplicate display of BuddyPress/bbPress rules in overview
- Fix coupons with 100% reduction are working correctly now
- Improve the [ms-memberhship-buy] shortcode to also work for guests
- Improve subscription to free memberships: payment screen is skipped

1.0.4.6
----------------------------------------------------------------------
- Fix problems with plugin settings after upgrading
- Fix issue where Front-End pages were not working (e.g. with Jetpack)

1.0.4.5
----------------------------------------------------------------------
- Add new Help section with documentation of shortcodes
- Fix: Membership Pages use default WordPress posts instead of URL
- Fix: Menu items are correctly generated when a Membership is created
- Memberships with pending payments can be cancelled by the member
- A ton of small bugfixes and minor improvements

1.0.4.4